--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="GoUnstoppable® - Links" />
+    <meta
+      name="description"
+      content="Hello, I am GoUnstoppable & I am a Frontend DeveloperHere are all my important links listed, you can visit this site and check all my socials :)"
+    />
+    <meta
+      name="keywords"
+      content="gounstoppable, frontend, linktree, flotree, links, website, personal website"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="author" content="GoUnstoppable®" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.0/css/all.css"
