--- a/index.html
+++ b/index.html
@@ -55,27 +55,37 @@
       <div class="links">
         <div class="link link1">
           <button>
-            <a href="#"><i class="fab fa-youtube"></i> YouTube Channel</a>
+            <a href="https://www.youtube.com/channel/UCP-j1Pfsly48IkagGLmz3wA"
+              ><i class="fab fa-youtube"></i> YouTube Channel</a
+            >
           </button>
         </div>
         <div class="link link2">
           <button>
-            <a href="#"><i class="fab fa-github-alt"></i> Github Profile</a>
+            <a href="https://github.com/UnstoppableYash"
+              ><i class="fab fa-github-alt"></i> Github Profile</a
+            >
           </button>
         </div>
         <div class="link link3">
           <button>
-            <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="https://instagram.com/gounstoppable.exe"
+              ><i class="fab fa-instagram"></i> Instagram</a
+            >
           </button>
         </div>
         <div class="link link4">
           <button>
-            <a href="#"><i class="fas fa-envelope-open"></i> E-mail</a>
+            <a href="mainto:gounstoppable@outlook.com"
+              ><i class="fas fa-envelope-open"></i> E-mail</a
+            >
           </button>
         </div>
         <div class="link link5">
           <button>
-            <a href="#"><i class="fab fa-discord"></i> Discord Server</a>
+            <a href="https://dsc.gg/gounstoppable"
+              ><i class="fab fa-discord"></i> Discord Server</a
+            >
           </button>
         </div>
       </div>
